# discord-job-tracker-bot

./: .gitignore  .ruff.toml  LICENSE  README.md  __init__.py  alembic.ini  bot.py  check_setup.py  env.example  models.py  pyproject.toml  requirements.txt  run_bot.py  scheduler.py  services.py
.github/workflows/: ci.yml
docs/: ai_search_guide.md  cross_user_search_guide.md  requirements.md
migrations/: env.py
migrations/versions/: 001_initial_tables.py
scripts/: check_setup.py  test_gemini.py
src/job_tracker/: __init__.py  ai_service.py  bot.py  models.py  scheduler.py  services.py
src/job_tracker/utils/: __init__.py  formatting.py
tests/: __init__.py  test_formatting.py  test_security.py  test_services.py
utils/: __init__.py  formatting.py
